--- a/3-matching/Analysis.ipynb
+++ b/3-matching/Analysis.ipynb
@@ -27,6 +27,20 @@
    },
    "outputs": [],
    "source": [
+    "# load stanford utilities, see readme\n",
+    "jar = '../data/stanford-postagger/stanford-postagger.jar'\n",
+    "model = '../data/stanford-postagger/models/french.tagger'\n",
+    "pos_tagger = StanfordPOSTagger(model, jar, encoding='utf8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "client = Elasticsearch(hosts='http://')"
    ]
   },
@@ -49,7 +63,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# some tests"
+   ]
   },
   {
    "cell_type": "code",
@@ -93,7 +109,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# select restaurants that will be analyzed"
+   ]
   },
   {
    "cell_type": "code",
@@ -115,6 +133,7 @@
    },
    "outputs": [],
    "source": [
+    "# overview of all naive queries results\n",
     "for restaurant in restaurants:\n",
     "    \n",
     "    print('- Restaurant: {}'.format(restaurant.name))\n",
@@ -124,7 +143,7 @@
     "            print('  - Plat: {}'.format(main.name))\n",
     "            recipes = [i for i in Search(using=client, index='recipes').query('match', name=main.name)[0].execute()]\n",
     "            recipes_match = recipes\n",
-    "            continue\n",
+    "            \n",
     "            for recipe in recipes_match:\n",
     "                \n",
     "                print('    - Recette: {}'.format(recipe.name))\n",
@@ -145,34 +164,6 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": [
-    "main = 'Filet de bœuf aux morilles'\n",
-    "recipes = Search(using=client, index='recipes').query('match', name=main)[:30].execute()\n",
-    "for recipe in recipes:\n",
-    "    print(recipe.name)\n",
-    "    print(recipe.meta.score)\n",
-    "    print(recipe.meta.id)\n",
-    "    print(recipe.meta.doc_type)\n",
-    "    ingredient_names = [i.content for i in recipe.ingredients]\n",
-    "    print(ingredient_names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
    "source": []
   },
   {
@@ -183,31 +174,7 @@
    },
    "outputs": [],
    "source": [
-    "agg = Search(using=client, index='recipes').query('match', name='Pavé de bœuf sauce Smash sur ardoise')\n",
-    "agg.aggs.bucket('count', 'significant_terms', field='ingredients.content', size=100)\n",
-    "#.bucket('count_avg', 'significant_terms', field='ingredients.content')\n",
-    "agg.execute().aggs.count.to_dict()['buckets']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "Search(using=client, index='recipes').query('match', name='Filet de bœuf aux morilles')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "# search recipes that match given meal name and that have ingredients with units\n",
     "def search_fielddata(index, term, fields=[], size=10):\n",
     "    res = client.search(\n",
     "        index=index,\n",
@@ -237,20 +204,25 @@
    },
    "outputs": [],
    "source": [
+    "# score and select best recipes among all results\n",
     "def recipes_enrichment(term, min_occurence=2, min_ing=5, prnt=False):\n",
     "    recipes = search_fielddata('recipes', term, ['ingredients.content'], 20)\n",
     "    \n",
     "    ings = {}\n",
     "    for recipe in recipes:\n",
+    "        # for each raw (stemmed, processing) elasticsesarch token\n",
     "        for ing in recipe['fields']['ingredients.content']:\n",
+    "            # count appariton in recipes\n",
     "            if ing in ings:\n",
     "                ings[ing] += 1\n",
     "            else:\n",
     "                ings[ing] = 1\n",
-    "        \n",
+    "    \n",
+    "    # sorted scoring token and threshold the lowest ones\n",
     "    ings_scores = sorted([(v, k) for k, v in ings.items()], reverse=True, key=lambda x: x[0])\n",
     "    ings_trendy = set([v for k, v in ings_scores if k >= min_occurence])\n",
     "    \n",
+    "    # score each recipe by counting how many previous token they contain\n",
     "    recipes_scores = []\n",
     "    for recipe in recipes:\n",
     "        matches = 0\n",
@@ -259,6 +231,7 @@
     "                matches += 1\n",
     "        recipes_scores.append((matches, recipe))\n",
     "        \n",
+    "    # keep only the recipes containing the most highest tokens\n",
     "    recipes_scores = sorted(recipes_scores, reverse=True, key=lambda x: x[0])\n",
     "    recipes_trendy = [v for k, v in recipes_scores if k >= min_ing]\n",
     "    \n",
@@ -276,30 +249,7 @@
    },
    "outputs": [],
    "source": [
-    "jar = '../data/stanford-postagger/stanford-postagger.jar'\n",
-    "model = '../data/stanford-postagger/models/french.tagger'\n",
-    "pos_tagger = StanfordPOSTagger(model, jar, encoding='utf8')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "pos_tagger.tag('belle tomate'.split())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "# search with boosting criterias of term, having an unit and muplitly by the inverse length (avoid long partial matches)\n",
     "def search_boost(index, term, unit, size=10):\n",
     "    res = client.search(\n",
     "        index=index,\n",
@@ -359,6 +309,7 @@
    },
    "outputs": [],
    "source": [
+    "# estimate quantity of ingredient when having no unit\n",
     "def estimate_quantity(index, term, percentile='50.0'):\n",
     "    res = client.search(\n",
     "        index=index,\n",
@@ -413,6 +364,7 @@
    },
    "outputs": [],
    "source": [
+    "# merge to nutriments dict by ingoring different unit (if it occurs), can average\n",
     "def merge_nutriments(arr, avg=False):\n",
     "    \n",
     "    arr = [a for a in arr if a]\n",
@@ -451,6 +403,7 @@
    },
    "outputs": [],
    "source": [
+    "# pretty print\n",
     "def pretty_nutriments(nuts):\n",
     "    print('\\n'.join(['{:25}{:.2f}\\t{}'.format(k, v['quantity'], v['unit']) for k, v in nuts.items()]))"
    ]
@@ -463,6 +416,7 @@
    },
    "outputs": [],
    "source": [
+    "# score and select best products by boosting search and quantity estimation when needed\n",
     "def ingredients_enrichment(recipe, prnt=False, log=False):\n",
     "    \n",
     "    ingredients = recipe['_source']['ingredients']\n",
@@ -474,12 +428,14 @@
     "    \n",
     "    for i in ingredients:\n",
     "        \n",
+    "        # remove adjective (such as small/big), can be an issue with color but generally improve the results\n",
     "        content = i['content']\n",
     "        pos = pos_tagger.tag(content.split())\n",
     "        content_cleaned = ' '.join([k for k, v in pos if v != 'ADJ'])\n",
     "        unit = i['unit']\n",
     "        quantity = i['quantity']\n",
     "        \n",
+    "        # cannot relate nutriment quantity if not unit for ingredients\n",
     "        if not unit:\n",
     "            quantity = estimate_quantity('recipes_nested', content)\n",
     "            \n",
@@ -493,6 +449,7 @@
     "\n",
     "        products = search_boost('products', content_cleaned, unit, 5)\n",
     "\n",
+    "        # this runs only once and take care of quantity management\n",
     "        for p in products:\n",
     "\n",
     "            nutirment_quantity = p['_source']['quantity']\n",
@@ -545,6 +502,7 @@
    },
    "outputs": [],
    "source": [
+    "# map meal to recipe and ingredient to product for getting nutriment\n",
     "def meal(name, min_occurence=2, min_ing=5):\n",
     "    re = recipes_enrichment(name, min_occurence=min_occurence, min_ing=min_ing)\n",
     "    if len(re):\n",
@@ -569,6 +527,7 @@
    },
    "outputs": [],
    "source": [
+    "# aggregate meal for given restaurant\n",
     "def resto(rest):\n",
     "    \n",
     "    bilan = {\n",
@@ -642,6 +601,7 @@
    },
    "outputs": [],
    "source": [
+    "# process selected restaurant and store into elasticsearch\n",
     "for r in tqdm(restaurants):\n",
     "    try:\n",
     "        src = resto(r)\n",
